package DataMappers;

public class RoomMapper {
}
